Finished mobile home page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>elyukai | Home</title>
+  <link rel="stylesheet" href="https://use.typekit.net/dgn5czr.css">
+  <link rel="stylesheet" href="/styles/index.css">
 </head>
 <body>
   <header>
@@ -26,8 +28,25 @@ for <strong>web</strong>, <strong>mobile</strong> and <strong>desktop</strong>.<
     <section class="projects">
       <h2>Projects</h2>
       <article>
-        <img src="" alt="">
+        <a href="/projects/optolith">
+          <img src="/projects/optolith/cover.png" alt="Optolith Interface">
+          <h3>Optolith</h3>
+        </a>
       </article>
+      <article>
+        <a href="/projects/maats-prinzip">
+          <img src="/projects/maats-prinzip/cover.png" alt="Maats Prinzip Cards">
+          <h3>Maats Prinzip</h3>
+        </a>
+      </article>
+      <a class="all-projects" href="/projects">All projects</a>
+    </section>
+    <section class="about-me">
+      <h2>About me</h2>
+      <p>My (real) name is Lukas Obermann and I'm 22 years old. Currently I am a student of Media Informatics (B.Sc.) at Flensburg University of Applied Sciences.</p>
+      <p>I've been using JavaScript and TypeScript for a few years now and recently started to use ReasonML. I am a big fan of React and related libraries as well as functional programming techniques.</p>
+      <p>On the design side, I use the Adobe CC software on a regular basis, especially InDesign, Photoshop, Illustrator and XD. I use it for basically all projects you can find on this page – as well as the page itself.</p>
+      <p>When I'm not working, I really enjoy playing pen and paper games and playing the piano.</p>
     </section>
   </main>
   <footer>
@@ -42,7 +61,7 @@ for <strong>web</strong>, <strong>mobile</strong> and <strong>desktop</strong>.<
     <ul class="legal">
       <li><a href="/privacy">Privacy Policy</a></li>
       <li><a href="/imprint">Imprint</a></li>
-      <li>&copy; Lukas Obermann 2020&ndash;present</li>
+      <li class="copy">&copy; Lukas Obermann 2020&ndash;present</li>
     </ul>
   </footer>
 </body>
