Added active state to header link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="/">elyukai</a></li>
+        <li class="active"><a href="/">elyukai</a></li>
         <li><a href="/projects">Projects</a></li>
         <li><a href="/profile">Profile</a></li>
         <li><a href="/contact">Contact</a></li>
