Finished projects and started woth profile

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>elyukai | Home</title>
+  <title>Home | elyukai</title>
   <link rel="stylesheet" href="https://use.typekit.net/dgn5czr.css">
   <link rel="stylesheet" href="/styles/index.css">
 </head>
-<body>
+<body class="home">
   <header>
     <nav>
       <ul>
-        <li class="active"><a href="/">elyukai</a></li>
-        <li><a href="/projects">Projects</a></li>
-        <li><a href="/profile">Profile</a></li>
-        <li><a href="/contact">Contact</a></li>
+        <li class="active"><a href="/"><span>elyukai</span></a></li>
+        <li><a href="/projects"><span>Projects</span></a></li>
+        <li><a href="/profile"><span>Profile</span></a></li>
+        <li><a href="/contact"><span>Contact</span></a></li>
       </ul>
     </nav>
   </header>
