Added HTML for Contact

--- a/projects/a-light-in-the-dark/index.html
+++ b/projects/a-light-in-the-dark/index.html
@@ -3,37 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact | elyukai</title>
+  <title>Maats Prinzip | elyukai</title>
   <link rel="stylesheet" href="https://use.typekit.net/dgn5czr.css">
   <link rel="stylesheet" href="/styles/index.css">
 </head>
-<body class="profile">
+<body class="project">
   <header>
     <nav>
       <ul>
         <li><a href="/"><span>elyukai</span></a></li>
-        <li><a href="/projects"><span>Projects</span></a></li>
+        <li class="active"><a href="/projects"><span>Projects</span></a></li>
         <li><a href="/profile"><span>Profile</span></a></li>
-        <li class="active"><a href="/contact"><span>Contact</span></a></li>
+        <li><a href="/contact"><span>Contact</span></a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <div class="title">
-      <h1>Contact</h1>
+    <div class="title title--cover">
+      <img class="cover" src="/projects/maats-prinzip/cover.png" alt="Optolith Interface">
+      <h1>Maats Prinzip</h1>
     </div>
-    <section>
-      <p>You can find me on multiple platforms! Feel free to use the platform of your choice!</p>
-      <dl>
-        <dt>E-Mail</dt>
-        <dd><a href="mailto:lukas@lukasobermann.me">lukas@lukasobermann.me</a></dd>
-        <dt>Facebook</dt>
-        <dd><a href="https://facebook.com/lukasoberma2n">lukasoberma2n</a></dd>
-        <dt>Twitter</dt>
-        <dd><a href="https://twitter.com/elyukai">@elyukai</a></dd>
-        <dt>GitHub</dt>
-        <dd><a href="https://github.com/elyukai">elyukai</a></dd>
+    <section class="intro">
+      <p><em>Maats Prinzip</em> is a card game three friends of mine and I invented during a game design module at university as the module's assignment. We had to come up with completely new ideas how to play a game to make it unique. That did not only cover the game's mechanics, but the background story and graphic design as well.</p>
+      <p><em>Maats Prinzip</em> takes place in ancient Egypt where you are part of he followers of either Aton or the established gods. As a team, you create bracelets to collect points and you decorate them to unleash strong effects to hinder the enemy team.</p>
+      <p>I was responsible for most of the graphic design, created the base idea for the background and contributed to the game's mechanics.</p>
+      <dl class="key-data">
+        <div>
+          <dt>Scope</dt>
+          <dd>Game Design</dd>
+          <dd>Graphic Design</dd>
+        </div>
+        <div>
+          <dt>Time Frame</dt>
+          <dd>Sep 2017–Mar 2018</dd>
+        </div>
+        <div>
+          <dt>Project Type</dt>
+          <dd>University Assignment</dd>
+        </div>
+        <div>
+          <dt>Team Members</dt>
+          <dd>Antonia Bornefeld-Ettmann</dd>
+          <dd>Thorben Dusenstahl</dd>
+          <dd>Leonie König</dd>
+        </div>
       </dl>
+      <a class="back" href="/projects">Back to all projects</a>
     </section>
     <section class="about-me">
       <h2>About me</h2>
