Started adding styles for larger screeens

--- a/index.html
+++ b/index.html
@@ -29,13 +29,19 @@ for <strong>web</strong>, <strong>mobile</strong> and <strong>desktop</strong>.<
       <h2>Projects</h2>
       <article>
         <a href="/projects/optolith">
-          <img src="/projects/optolith/cover.png" alt="Optolith Interface">
+          <img src="/projects/optolith/cover.png" alt="Optolith interface">
           <h3>Optolith</h3>
         </a>
       </article>
       <article>
+        <a href="/projects/a-light-in-the-dark">
+          <img src="/projects/a-light-in-the-dark/cover.png" alt="Game screenshot">
+          <h3>A Light in the Dark</h3>
+        </a>
+      </article>
+      <article>
         <a href="/projects/maats-prinzip">
-          <img src="/projects/maats-prinzip/cover.png" alt="Maats Prinzip Cards">
+          <img src="/projects/maats-prinzip/cover.png" alt="Maats Prinzip cards">
           <h3>Maats Prinzip</h3>
         </a>
       </article>
@@ -50,19 +56,21 @@ for <strong>web</strong>, <strong>mobile</strong> and <strong>desktop</strong>.<
     </section>
   </main>
   <footer>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/projects">Projects</a></li>
-        <li><a href="/profile">Profile</a></li>
-        <li><a href="/contact">Contact</a></li>
+    <div class="footer-content">
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/projects">Projects</a></li>
+          <li><a href="/profile">Profile</a></li>
+          <li><a href="/contact">Contact</a></li>
+        </ul>
+      </nav>
+      <ul class="legal">
+        <li><a href="/privacy">Privacy Policy</a></li>
+        <li><a href="/imprint">Imprint</a></li>
+        <li class="copy">&copy; Lukas Obermann 2020&ndash;present</li>
       </ul>
-    </nav>
-    <ul class="legal">
-      <li><a href="/privacy">Privacy Policy</a></li>
-      <li><a href="/imprint">Imprint</a></li>
-      <li class="copy">&copy; Lukas Obermann 2020&ndash;present</li>
-    </ul>
+    </div>
   </footer>
 </body>
 </html>
