--- a/projects/index.html
+++ b/projects/index.html
@@ -25,15 +25,31 @@
     <section class="projects">
       <article>
         <a href="/projects/optolith">
-          <img src="/projects/optolith/cover.png" alt="Optolith Interface">
+          <img src="/projects/optolith/cover.png" alt="Optolith interface">
           <h3>Optolith</h3>
           <p>Project Maintainer, UI/UX Design, Development</p>
           <p class="read-more">Read More</p>
         </a>
       </article>
       <article>
+        <a href="/projects/language-courses">
+          <img src="/projects/language-courses/cover.png" alt="Film screenshot">
+          <h3>Languages Courses</h3>
+          <p>Graphic Design, Motion Graphics</p>
+          <p class="read-more">Read More</p>
+        </a>
+      </article>
+      <article>
+        <a href="/projects/a-light-in-the-dark">
+          <img src="/projects/a-light-in-the-dark/cover.png" alt="Game screenshot">
+          <h3>A Light in the Dark</h3>
+          <p>Game Design, Environment Design, Development, Unity</p>
+          <p class="read-more">Read More</p>
+        </a>
+      </article>
+      <article>
         <a href="/projects/maats-prinzip">
-          <img src="/projects/maats-prinzip/cover.png" alt="Maats Prinzip Cards">
+          <img src="/projects/maats-prinzip/cover.png" alt="Maats Prinzip cards">
           <h3>Maats Prinzip</h3>
           <p>Game Design, Graphic Design</p>
           <p class="read-more">Read More</p>
