--- a/projects/maats-prinzip/index.html
+++ b/projects/maats-prinzip/index.html
@@ -34,6 +34,12 @@
           <dd>Graphic Design</dd>
         </div>
         <div>
+          <dt>Used tools</dt>
+          <dd>Adobe InDesign</dd>
+          <dd>Adobe Photoshop</dd>
+          <dd>Adobe Illustrator</dd>
+        </div>
+        <div>
           <dt>Time Frame</dt>
           <dd>Sep 2017–Mar 2018</dd>
         </div>
