--- a/projects/optolith/index.html
+++ b/projects/optolith/index.html
@@ -34,6 +34,13 @@
           <dd>Development</dd>
         </div>
         <div>
+          <dt>Used tools</dt>
+          <dd>Electron</dd>
+          <dd>ReasonML</dd>
+          <dd>TypeScript</dd>
+          <dd>Adobe XD</dd>
+        </div>
+        <div>
           <dt>Time Frame</dt>
           <dd>Since 2017</dd>
         </div>
