--- a/imprint/index.html
+++ b/imprint/index.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="/"><span>elyukai</span></a></li>
         <li><a href="/projects"><span>Projects</span></a></li>
-        <li class="active"><a href="/profile"><span>Profile</span></a></li>
+        <li><a href="/profile"><span>Profile</span></a></li>
         <li><a href="/contact"><span>Contact</span></a></li>
       </ul>
     </nav>
