--- a/projects/a-light-in-the-dark/index.html
+++ b/projects/a-light-in-the-dark/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Maats Prinzip | elyukai</title>
+  <title>A Light in the Dark | elyukai</title>
   <link rel="stylesheet" href="https://use.typekit.net/dgn5czr.css">
   <link rel="stylesheet" href="/styles/index.css">
 </head>
@@ -20,32 +20,30 @@
   </header>
   <main>
     <div class="title title--cover">
-      <img class="cover" src="/projects/maats-prinzip/cover.png" alt="Optolith Interface">
-      <h1>Maats Prinzip</h1>
+      <img class="cover" src="/projects/a-light-in-the-dark/cover.png" alt="Game screenshot">
+      <h1>A Light in the Dark</h1>
     </div>
     <section class="intro">
-      <p><em>Maats Prinzip</em> is a card game three friends of mine and I invented during a game design module at university as the module's assignment. We had to come up with completely new ideas how to play a game to make it unique. That did not only cover the game's mechanics, but the background story and graphic design as well.</p>
-      <p><em>Maats Prinzip</em> takes place in ancient Egypt where you are part of he followers of either Aton or the established gods. As a team, you create bracelets to collect points and you decorate them to unleash strong effects to hinder the enemy team.</p>
-      <p>I was responsible for most of the graphic design, created the base idea for the background and contributed to the game's mechanics.</p>
+      <p><em>A Light in the Dark</em> is a dexterity game where you have to roll a ball through a labyrinth of paths to collect points and find the end. I created the game during a game programming module at university as the module's assignment.</p>
+      <p>I paid a lot of attention to the look and feel of the game and the difficuly of the levels rather than complex game mechanics. My goal was to create a pleasing but challenging game while being easy to use.</p>
       <dl class="key-data">
         <div>
           <dt>Scope</dt>
           <dd>Game Design</dd>
-          <dd>Graphic Design</dd>
+          <dd>Environment Design</dd>
+          <dd>Development</dd>
+        </div>
+        <div>
+          <dt>Used tools</dt>
+          <dd>Unity</dd>
         </div>
         <div>
           <dt>Time Frame</dt>
-          <dd>Sep 2017–Mar 2018</dd>
+          <dd>Apr 2018–Jul 2018</dd>
         </div>
         <div>
           <dt>Project Type</dt>
           <dd>University Assignment</dd>
-        </div>
-        <div>
-          <dt>Team Members</dt>
-          <dd>Antonia Bornefeld-Ettmann</dd>
-          <dd>Thorben Dusenstahl</dd>
-          <dd>Leonie König</dd>
         </div>
       </dl>
       <a class="back" href="/projects">Back to all projects</a>
