Finished rough design implementation

--- a/contact/index.html
+++ b/contact/index.html
@@ -20,43 +20,51 @@
   </header>
   <main>
     <div class="title">
-      <h1>Contact</h1>
+      <div class="wrapper">
+        <h1>Contact</h1>
+      </div>
     </div>
     <section>
-      <p>You can find me on multiple platforms! Feel free to use the platform of your choice!</p>
-      <dl>
-        <dt>E-Mail</dt>
-        <dd><a href="mailto:lukas@lukasobermann.me">lukas@lukasobermann.me</a></dd>
-        <dt>Facebook</dt>
-        <dd><a href="https://facebook.com/lukasoberma2n">lukasoberma2n</a></dd>
-        <dt>Twitter</dt>
-        <dd><a href="https://twitter.com/elyukai">@elyukai</a></dd>
-        <dt>GitHub</dt>
-        <dd><a href="https://github.com/elyukai">elyukai</a></dd>
-      </dl>
+      <div class="wrapper">
+        <p>You can find me on multiple platforms! Feel free to use the platform of your choice!</p>
+        <dl>
+          <dt>E-Mail</dt>
+          <dd><a href="mailto:lukas@lukasobermann.me">lukas@lukasobermann.me</a></dd>
+          <dt>Facebook</dt>
+          <dd><a href="https://facebook.com/lukasoberma2n">lukasoberma2n</a></dd>
+          <dt>Twitter</dt>
+          <dd><a href="https://twitter.com/elyukai">@elyukai</a></dd>
+          <dt>GitHub</dt>
+          <dd><a href="https://github.com/elyukai">elyukai</a></dd>
+        </dl>
+      </div>
     </section>
     <section class="about-me">
-      <h2>About me</h2>
-      <p>My (real) name is Lukas Obermann and I'm 22 years old. Currently I am a student of Media Informatics (B.Sc.) at Flensburg University of Applied Sciences.</p>
-      <p>I've been using JavaScript and TypeScript for a few years now and recently started to use ReasonML. I am a big fan of React and related libraries as well as functional programming techniques.</p>
-      <p>On the design side, I use the Adobe CC software on a regular basis, especially InDesign, Photoshop, Illustrator and XD. I use it for basically all projects you can find on this page – as well as the page itself.</p>
-      <p>When I'm not working, I really enjoy playing pen and paper games and playing the piano.</p>
+      <div class="wrapper">
+        <h2>About me</h2>
+        <p>My (real) name is Lukas Obermann and I'm 22 years old. Currently I am a student of Media Informatics (B.Sc.) at Flensburg University of Applied Sciences.</p>
+        <p>I've been using JavaScript and TypeScript for a few years now and recently started to use ReasonML. I am a big fan of React and related libraries as well as functional programming techniques.</p>
+        <p>On the design side, I use the Adobe CC software on a regular basis, especially InDesign, Photoshop, Illustrator and XD. I use it for basically all projects you can find on this page – as well as the page itself.</p>
+        <p>When I'm not working, I really enjoy playing pen and paper games and playing the piano.</p>
+      </div>
     </section>
   </main>
   <footer>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/projects">Projects</a></li>
-        <li><a href="/profile">Profile</a></li>
-        <li><a href="/contact">Contact</a></li>
+    <div class="wrapper">
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/projects">Projects</a></li>
+          <li><a href="/profile">Profile</a></li>
+          <li><a href="/contact">Contact</a></li>
+        </ul>
+      </nav>
+      <ul class="legal">
+        <li><a href="/privacy">Privacy Policy</a></li>
+        <li><a href="/imprint">Imprint</a></li>
+        <li class="copy">&copy; Lukas Obermann 2020&ndash;present</li>
       </ul>
-    </nav>
-    <ul class="legal">
-      <li><a href="/privacy">Privacy Policy</a></li>
-      <li><a href="/imprint">Imprint</a></li>
-      <li class="copy">&copy; Lukas Obermann 2020&ndash;present</li>
-    </ul>
+    </div>
   </footer>
 </body>
 </html>
