--- a/index.html
+++ b/index.html
@@ -20,43 +20,49 @@
   </header>
   <main>
     <div class="title">
-      <span>Hello, I'm</span>
-      <h1>elyukai</h1>
-      <span>and I <strong>develop</strong> and <strong>design</strong> software
-for <strong>web</strong>, <strong>mobile</strong> and <strong>desktop</strong>.</span>
+      <div class="wrapper">
+        <span>Hello, I'm</span>
+        <h1>elyukai</h1>
+        <span>and I <strong>develop</strong> and <strong>design</strong> software
+  for <strong>web</strong>, <strong>mobile</strong> and <strong>desktop</strong>.</span>
+      </div>
     </div>
     <section class="projects">
-      <h2>Projects</h2>
-      <article>
-        <a href="/projects/optolith">
-          <img src="/projects/optolith/cover.png" alt="Optolith interface">
-          <h3>Optolith</h3>
-        </a>
-      </article>
-      <article>
-        <a href="/projects/a-light-in-the-dark">
-          <img src="/projects/a-light-in-the-dark/cover.png" alt="Game screenshot">
-          <h3>A Light in the Dark</h3>
-        </a>
-      </article>
-      <article>
-        <a href="/projects/maats-prinzip">
-          <img src="/projects/maats-prinzip/cover.png" alt="Maats Prinzip cards">
-          <h3>Maats Prinzip</h3>
-        </a>
-      </article>
-      <a class="all-projects" href="/projects">All projects</a>
+      <div class="wrapper">
+        <h2>Projects</h2>
+        <article>
+          <a href="/projects/optolith">
+            <img src="/projects/optolith/cover.png" alt="Optolith interface">
+            <h3>Optolith</h3>
+          </a>
+        </article>
+        <article>
+          <a href="/projects/a-light-in-the-dark">
+            <img src="/projects/a-light-in-the-dark/cover.png" alt="Game screenshot">
+            <h3>A Light in the Dark</h3>
+          </a>
+        </article>
+        <article>
+          <a href="/projects/maats-prinzip">
+            <img src="/projects/maats-prinzip/cover.png" alt="Maats Prinzip cards">
+            <h3>Maats Prinzip</h3>
+          </a>
+        </article>
+        <a class="all-projects" href="/projects">All projects</a>
+      </div>
     </section>
     <section class="about-me">
-      <h2>About me</h2>
-      <p>My (real) name is Lukas Obermann and I'm 22 years old. Currently I am a student of Media Informatics (B.Sc.) at Flensburg University of Applied Sciences.</p>
-      <p>I've been using JavaScript and TypeScript for a few years now and recently started to use ReasonML. I am a big fan of React and related libraries as well as functional programming techniques.</p>
-      <p>On the design side, I use the Adobe CC software on a regular basis, especially InDesign, Photoshop, Illustrator and XD. I use it for basically all projects you can find on this page – as well as the page itself.</p>
-      <p>When I'm not working, I really enjoy playing pen and paper games and playing the piano.</p>
+      <div class="wrapper">
+        <h2>About me</h2>
+        <p>My (real) name is Lukas Obermann and I'm 22 years old. Currently I am a student of Media Informatics (B.Sc.) at Flensburg University of Applied Sciences.</p>
+        <p>I've been using JavaScript and TypeScript for a few years now and recently started to use ReasonML. I am a big fan of React and related libraries as well as functional programming techniques.</p>
+        <p>On the design side, I use the Adobe CC software on a regular basis, especially InDesign, Photoshop, Illustrator and XD. I use it for basically all projects you can find on this page – as well as the page itself.</p>
+        <p>When I'm not working, I really enjoy playing pen and paper games and playing the piano.</p>
+      </div>
     </section>
   </main>
   <footer>
-    <div class="footer-content">
+    <div class="wrapper">
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
