--- a/profile/index.html
+++ b/profile/index.html
@@ -20,84 +20,98 @@
   </header>
   <main>
     <div class="title">
-      <h1>Profile</h1>
+      <div class="wrapper">
+        <h1>Profile</h1>
+      </div>
     </div>
     <section>
-      <h2>Education</h2>
-      <dl>
-        <dt>2007–2016</dt>
-        <dd>High School (Gymnasium Jungmannschule Eckernförde)</dd>
-        <dt class="blur">2016–2017</dt>
-        <dd class="blur">Work & Travel New Zealand</dd>
-        <dt>2017–now</dt>
-        <dd>Flensburg University of Applied Sciences<br><strong>Media Informatics B.Sc.</strong> – Major Film</dd>
-      </dl>
+      <div class="wrapper">
+        <h2>Education</h2>
+        <dl>
+          <dt>2007–2016</dt>
+          <dd>High School (Gymnasium Jungmannschule Eckernförde)</dd>
+          <dt class="blur">2016–2017</dt>
+          <dd class="blur">Work & Travel New Zealand</dd>
+          <dt>2017–now</dt>
+          <dd>Flensburg University of Applied Sciences<br><strong>Media Informatics B.Sc.</strong> – Major Film</dd>
+        </dl>
+      </div>
     </section>
     <section>
-      <h2>Languages</h2>
-      <dl>
-        <dt>German</dt>
-        <dd>Native Tongue</dd>
-        <dt>English</dt>
-        <dd>Good</dd>
-      </dl>
+      <div class="wrapper">
+        <h2>Languages</h2>
+        <dl>
+          <dt>German</dt>
+          <dd>Native Tongue</dd>
+          <dt>English</dt>
+          <dd>Good</dd>
+        </dl>
+      </div>
     </section>
     <section>
-      <h2>Skills</h2>
-      <dl class="lists">
-        <dt>Design</dt>
-        <dd>UI Design</dd>
-        <dd>UX Design</dd>
-        <dd>Corporate Design</dd>
-        <dt>Programming Languages</dt>
-        <dd>JavaScript</dd>
-        <dd>TypeScript</dd>
-        <dd>ReasonML</dd>
-        <dd>PHP</dd>
-        <dd>Java</dd>
-        <dt>Application Development</dt>
-        <dd>Electron</dd>
-        <dd>Android Native</dd>
-        <dt>Web Development</dt>
-        <dd>Node.js</dd>
-        <dd>React</dd>
-        <dd>Redux</dd>
-        <dt>Content Management Systems</dt>
-        <dd>Kirby</dd>
-        <dd>Drupal</dd>
-      </dl>
+      <div class="wrapper">
+        <h2>Skills</h2>
+        <dl class="lists">
+          <dt>Design</dt>
+          <dd>UI Design</dd>
+          <dd>UX Design</dd>
+          <dd>Corporate Design</dd>
+          <dt>Programming Languages</dt>
+          <dd>JavaScript</dd>
+          <dd>TypeScript</dd>
+          <dd>ReasonML</dd>
+          <dd>PHP</dd>
+          <dd>Java</dd>
+          <dt>Application Development</dt>
+          <dd>Electron</dd>
+          <dd>Android Native</dd>
+          <dt>Web Development</dt>
+          <dd>Node.js</dd>
+          <dd>React</dd>
+          <dd>Redux</dd>
+          <dt>Content Management Systems</dt>
+          <dd>Kirby</dd>
+          <dd>Drupal</dd>
+        </dl>
+      </div>
     </section>
     <section>
-      <h2>Interests & Hobbies</h2>
-      <ul>
-        <li>Functional Programming</li>
-        <li>Pen-and-paper, especially <em>The Dark Eye</em></li>
-        <li>Playing the piano</li>
-        <li>Digital painting</li>
-      </ul>
+      <div class="wrapper">
+        <h2>Interests & Hobbies</h2>
+        <ul>
+          <li>Functional Programming</li>
+          <li>Pen-and-paper, especially <em>The Dark Eye</em></li>
+          <li>Playing the piano</li>
+          <li>Digital painting</li>
+        </ul>
+      </div>
     </section>
     <section class="about-me">
-      <h2>About me</h2>
-      <p>My (real) name is Lukas Obermann and I'm 22 years old. Currently I am a student of Media Informatics (B.Sc.) at Flensburg University of Applied Sciences.</p>
-      <p>I've been using JavaScript and TypeScript for a few years now and recently started to use ReasonML. I am a big fan of React and related libraries as well as functional programming techniques.</p>
-      <p>On the design side, I use the Adobe CC software on a regular basis, especially InDesign, Photoshop, Illustrator and XD. I use it for basically all projects you can find on this page – as well as the page itself.</p>
-      <p>When I'm not working, I really enjoy playing pen and paper games and playing the piano.</p>
+      <div class="wrapper">
+        <h2>About me</h2>
+        <p>My (real) name is Lukas Obermann and I'm 22 years old. Currently I am a student of Media Informatics (B.Sc.) at Flensburg University of Applied Sciences.</p>
+        <p>I've been using JavaScript and TypeScript for a few years now and recently started to use ReasonML. I am a big fan of React and related libraries as well as functional programming techniques.</p>
+        <p>On the design side, I use the Adobe CC software on a regular basis, especially InDesign, Photoshop, Illustrator and XD. I use it for basically all projects you can find on this page – as well as the page itself.</p>
+        <p>When I'm not working, I really enjoy playing pen and paper games and playing the piano.</p>
+      </div>
     </section>
   </main>
   <footer>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/projects">Projects</a></li>
-        <li><a href="/profile">Profile</a></li>
-        <li><a href="/contact">Contact</a></li>
+    <div class="wrapper">
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/projects">Projects</a></li>
+          <li><a href="/profile">Profile</a></li>
+          <li><a href="/contact">Contact</a></li>
+        </ul>
+      </nav>
+      <ul class="legal">
+        <li><a href="/privacy">Privacy Policy</a></li>
+        <li><a href="/imprint">Imprint</a></li>
+        <li class="copy">&copy; Lukas Obermann 2020&ndash;present</li>
       </ul>
-    </nav>
-    <ul class="legal">
-      <li><a href="/privacy">Privacy Policy</a></li>
-      <li><a href="/imprint">Imprint</a></li>
-      <li class="copy">&copy; Lukas Obermann 2020&ndash;present</li>
-    </ul>
+    </div>
   </footer>
 </body>
 </html>
